--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,25 @@
 // Navigation code here
+
+.nav-content {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    color: @nav-font;
+    background-color: @nav-bg;
+    padding-bottom: 2.0rem;
+
+    h1 {
+        font-size: 3.5rem;
+        margin: 1.5rem 0;
+    }
+
+    nav {
+        font-size: 2.0rem;
+
+        a {
+            padding: 2.5rem;
+            text-decoration: none;
+            color: @header-font-color;
+        }
+    }
+}
