--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,25 +1,23 @@
 // Navigation code here
 
 .nav-content {
-    align-items: center;
-    display: flex;
+    .display-flex-center();
     flex-direction: column;
     color: @nav-font;
     background-color: @nav-bg;
-    padding-bottom: 2.0rem;
+    padding-bottom: 20px;
 
     h1 {
         font-size: 3.5rem;
-        margin: 1.5rem 0;
+        margin: 15px 0;
     }
 
     nav {
         font-size: 2.0rem;
 
         a {
-            padding: 2.5rem;
-            text-decoration: none;
-            color: @header-font-color;
+            padding: 25px;
+            .anchor-style();
         }
     }
 }
