--- a/less/home-page.less
+++ b/less/home-page.less
@@ -47,8 +47,7 @@
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
-    display: flex;
-    justify-content: center;
+    .display-flex-center();
 
     .walk-text {
       width: 50%;
@@ -62,7 +61,14 @@
       }
 
       .btn {
+        .btn-style(rgb(2, 2, 2), rgb(235, 11, 11));
+        cursor: pointer;
+
+        &:hover {
+          .color();
+        }
       }
+      
     }
 
     .walk-img {
