--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,7 @@
 
     .logo{
       border-radius: 10px;
+      width: 100%;
     }
 
     h2 {
@@ -22,6 +23,26 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+
+    .blast {
+      @media @phone {
+        width: 90%;
+        margin: 15px auto;
+
+      }
+    }
+    
+    .sky {
+      @media @phone {
+        display: none;
+      }
+    }
+    
+    .launch {
+      @media @phone {
+        display: none;
+      }
+    }
 
     img {
       width: 28%;
@@ -49,8 +70,18 @@
     padding: 50px 60px;
     .display-flex-center();
 
+    @media @phone {
+      display: flex;
+      flex-direction: column-reverse;
+      padding: 30px 8px;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -67,6 +98,13 @@
         &:hover {
           .color();
         }
+
+        @media @phone {
+          width: 470px;
+          height: 70px;
+          font-size: 18px;
+          margin: auto;
+        }
       }
       
     }
@@ -74,11 +112,21 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin-left: 0;
+        margin-bottom: 15px;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+
+        @media @phone {
+          height: 360px;
+        }
       }
     }
   }
