--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,7 @@
     color: @nav-font;
     background-color: @nav-bg;
     padding-bottom: 20px;
+    margin: 0 10%;
 
     h1 {
         font-size: 3.5rem;
@@ -18,6 +19,11 @@
         a {
             padding: 25px;
             .anchor-style();
+
+            @media @phone {
+                padding: 16px;
+                font-size: 1.6rem;
+            }
         }
     }
 }
