Corrected the nav for media @phone

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,10 @@
     padding-bottom: 20px;
     margin: 0 10%;
 
+    @media @phone {
+        margin: auto;
+    }
+
     h1 {
         font-size: 3.5rem;
         margin: 15px 0;
