--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,11 @@ p {
   padding-bottom: 20px;
   margin: 0 10%;
 }
+@media (max-width: 500px) {
+  .nav-content {
+    margin: auto;
+  }
+}
 .nav-content h1 {
   font-size: 3.5rem;
   margin: 15px 0;
