--- a/less/home-page.less
+++ b/less/home-page.less
@@ -99,7 +99,7 @@
         }
 
         @media @phone {
-          width: 470px;
+          width: 90%;
           height: 70px;
           font-size: 18px;
           margin: auto;
